--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,11 +1,48 @@
 {
 	"configurations": [
 		{
-			"name": "Python Debugger: FastAPI",
+			"name": "Python Debugger: FastAPI, local",
 			"type": "debugpy",
 			"request": "launch",
 			"module": "uvicorn",
-			"args": ["main:app", "--reload", "--host", "0.0.0.0", "--port", "8001"],
+			"args": [
+				"main:app",
+				"--reload",
+				"--host",
+				"192.168.20.5",
+				"--port",
+				"8001"
+			],
+			"jinja": true
+		},
+		{
+			"name": "Python Debugger: FastAPI, zt",
+			"type": "debugpy",
+			"request": "launch",
+			"module": "uvicorn",
+			"args": [
+				"main:app",
+				"--reload",
+				"--host",
+				"10.147.17.107",
+				"--port",
+				"8001"
+			],
+			"jinja": true
+		},
+		{
+			"name": "Python Debugger: FastAPI, zt bp",
+			"type": "debugpy",
+			"request": "launch",
+			"module": "uvicorn",
+			"args": [
+				"main:app",
+				"--reload",
+				"--host",
+				"192.168.20.8",
+				"--port",
+				"8001"
+			],
 			"jinja": true
 		}
 	]
