--- a/utils/archive_data.yaml
+++ b/utils/archive_data.yaml
@@ -33,4 +33,5 @@ Project:
   Home: bafyreifth4csyc2hlwcqhnv6kvckzxulfwreelae74ymhwpqk6jfq7jqfi
   Crafts: bafyreihwzqm3qg2vf6rtffr5wp6e7766bte5owcc62l7g7mpus6snmrb7y
   Anytype Automation: bafyreiadjzxhc4houdsu4mtpm3pa2v2b4rrebhwzvxucsg723jho77qaia
-DoD: bafyreia24nahzotjxtbhy45evepheu7m7hsp6oljmrl5ukiig6q5fxyipu
+  Needs: bafyreidmk6dgfnlpy5qyqyft5p2yxe4uinn3iu2skce7trnmx7brwibq74
+  Rats: bafyreig2frziylxykwphhg2ayi4sefzvlbq2tnxd633sppp5qtsh3q637e
