security measures, set collection broken. assigns type instead of collection for some reason

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,6 +1,21 @@
 {
 	"configurations": [
 		{
+			"name": "Python Debugger: FastAPI, local zt",
+			"type": "debugpy",
+			"request": "launch",
+			"module": "uvicorn",
+			"args": [
+				"main_local:app",
+				"--reload",
+				"--host",
+				"10.147.17.107",
+				"--port",
+				"8001"
+			],
+			"jinja": true
+		},
+		{
 			"name": "Python Debugger: FastAPI, local",
 			"type": "debugpy",
 			"request": "launch",
