--- a/utils/config.yaml
+++ b/utils/config.yaml
@@ -11,6 +11,7 @@ automation_list:
   overdue: "7b42e161-589d-4eaa-a57b-4e1c6226830f/"
   reset: "8a872d64-7ed4-417e-824c-745d19604849/"
   repeating_tag: "bafyreihfuqod6lpdxeybi45mbdduii6slrfbw6w5e4xmqll24dnclrxvwu"
+  review_tag: "bafyreihiiibe566qh7xgl4bd66h7fqh4tokaan623rzodst3hyfdycb5ie"
   summary: "48899c65-8da0-4c28-9fc1-b2a8811f523e/"
 collection: 
   Management: "bafyreihdbrx665q7gjpgho6zcubyxdcl6vox52323xhridhfyx2iyonlki"
