--- a/utils/archive_data.yaml
+++ b/utils/archive_data.yaml
@@ -35,3 +35,4 @@ Project:
   Anytype Automation: bafyreiadjzxhc4houdsu4mtpm3pa2v2b4rrebhwzvxucsg723jho77qaia
   Needs: bafyreidmk6dgfnlpy5qyqyft5p2yxe4uinn3iu2skce7trnmx7brwibq74
   Rats: bafyreig2frziylxykwphhg2ayi4sefzvlbq2tnxd633sppp5qtsh3q637e
+  Cleaning: bafyreiekzxqroutoko2xtmbahdq7zxzwhigcoeo77okkrkdprf5axm3gku
