--- a/utils/config.yaml
+++ b/utils/config.yaml
@@ -29,7 +29,7 @@ query:
     afternoon: "59651999-59eb-46b1-b509-3ff495bedbbc"
     evening: "e6780ec4-a8ad-4821-94a7-0e0f3cec6d32"
 templates:
-  routine:
+  ritual:
     morning: "bafyreiajvfab4ouumckrduen7cntadngigrteqczfqajlninrvsnfpj7cu"
     evening: "bafyreiapnnqfhdwmkpd4ewitrh4ust3k6cnb4drzomvjl3aelzh6zwufjq"
     planning: "bafyreibftkf34iod7ufkawsyxq5f4gqwc6xrzv7gpt2udlzysnlyfdfmcy"
