Review sechedule + fixes

--- a/utils/config.yaml
+++ b/utils/config.yaml
@@ -1,35 +1,59 @@
 # config.yaml
 url: "http://localhost:31009/v1/spaces/"
 me: "_participant_bafyreihydnqhxtkwiv55kqafoxyfk3puf7fm54n6txjo34iafbjujbbo2a_2bx9tjqqte21g_ABDuEvCxWRjgHiuX1XL2384JN95jYnEPYvnmxFYQTg4zfLzW"
+
 spaces:
   main: "bafyreihydnqhxtkwiv55kqafoxyfk3puf7fm54n6txjo34iafbjujbbo2a.2bx9tjqqte21g"
   archive: "bafyreifxsujwztkbi2zrf3yudthopppmhcz36aiyozmbuc323ai6q6347e.2bx9tjqqte21g"
-automation_list:
-  id: "bafyreibhhlelfjv2kmtomcbgsprj3xjjx4xtw3oqh4qtvwfyquyg4gcbbi"
-  aoc: "3be228ab-8ee7-41a2-b5dd-3398ae19067e"
-  migrate: "3806f1d1-c2b5-4077-8c89-ebc83baff141"
-  overdue: "7b42e161-589d-4eaa-a57b-4e1c6226830f"
-  reset: "8a872d64-7ed4-417e-824c-745d19604849"
-  repeating_tag: "bafyreihfuqod6lpdxeybi45mbdduii6slrfbw6w5e4xmqll24dnclrxvwu"
-  review_tag: "bafyreihiiibe566qh7xgl4bd66h7fqh4tokaan623rzodst3hyfdycb5ie"
-  summary: "48899c65-8da0-4c28-9fc1-b2a8811f523e"
-collection: 
+  
+collections: 
   Management: "bafyreihdbrx665q7gjpgho6zcubyxdcl6vox52323xhridhfyx2iyonlki"
   Workshop: "bafyreid4oztagsumccf62kzpuk5qazmltw2gy75dcmn7qxc3ayrpgyyooq"
   Self-Dev: "bafyreidxtxwkpj5pyhewg5vrvjndd7o7w5kxublbg5u4fbsocpasuvkbxy"
   Care: "bafyreig5mvdr4f5cy3diorwvrbleckome6zsylnn2uxnzvfcswzkn3oujy"
   Finance: "bafyreifikvazzy2htrinkl7zijp5co62mvqczqyvgzfp2bovepvfmdi5y4"
   Home: "bafyreic5inopow5rcuhky2nmqx2kutpxoole7zw625dzyx2e77buveiyai"  
-query:
-  Task by Day: 
-    id: "bafyreigdfl2kfbymfio375u5ukyabsp2323tqnya6o7d6hhfpmrmhthaue"
-    today: "eb7230a2-c65c-4a25-a9c6-173da5eed014"
-    morning: "09f5703f-caaf-4173-9add-93738339926a"
-    noon: "da80f005-519d-4e2d-8b6e-b0a78dcb8ea8"
-    afternoon: "59651999-59eb-46b1-b509-3ff495bedbbc"
-    evening: "e6780ec4-a8ad-4821-94a7-0e0f3cec6d32"
+
+properties:
+  review_date: "67dab1b02bf7cb67453ef126"
+
+queries:
+  automation: "bafyreibhhlelfjv2kmtomcbgsprj3xjjx4xtw3oqh4qtvwfyquyg4gcbbi"
+  task_by_day: "bafyreigdfl2kfbymfio375u5ukyabsp2323tqnya6o7d6hhfpmrmhthaue"
+  review: "bafyreiamuhczticd2adaix6vvnxhvln72euag2mwgjuvnciyfe54pkhaze"
+  task_cleanup: "bafyreih64htmirwgoxmlrkc6cy57q2ep63rcg2n2gybtpa33q5izsol6je"
+  
+tags:
+  status:
+    repeating: "bafyreihfuqod6lpdxeybi45mbdduii6slrfbw6w5e4xmqll24dnclrxvwu"
+    review: "bafyreihiiibe566qh7xgl4bd66h7fqh4tokaan623rzodst3hyfdycb5ie"
+  review:
+    id: "bafyreicsass7zrgi6zph4cyrusqf7ffhjvoht3qb4q6ltxkxmmlrojbsc4"
+    day: "bafyreiggpz3dm2kw6wxpnfpnsl4dkkwmpa7xqvouyplavxosxnm5ldaeby"
+    week: "bafyreigdph4ppovrlslw4pbfsjyly4fews5s4hpmcgnbblsrktsp6355ga"
+    month: "bafyreidf5qjhwobgvfn4ydvit7gdnn22xnuzfeqfoaq6by473rui2eawaa"
+    quarter: "bafyreiapiugw27uvbmlwsdjxxsoqsblnc5ep74wk756ygmt5scs6v46hse"
+    year: "bafyreie6ghvmxwjxzpvbfxyt4l7eqeuvjdslb2umllvrwnp64hhltk2vee"
+    
 templates:
   ritual:
     morning: "bafyreiajvfab4ouumckrduen7cntadngigrteqczfqajlninrvsnfpj7cu"
     evening: "bafyreiapnnqfhdwmkpd4ewitrh4ust3k6cnb4drzomvjl3aelzh6zwufjq"
     planning: "bafyreibftkf34iod7ufkawsyxq5f4gqwc6xrzv7gpt2udlzysnlyfdfmcy"
+
+views:
+  automation:
+    aoc: "3be228ab-8ee7-41a2-b5dd-3398ae19067e"
+    migrate: "3806f1d1-c2b5-4077-8c89-ebc83baff141"
+    overdue: "7b42e161-589d-4eaa-a57b-4e1c6226830f"
+    reset: "8a872d64-7ed4-417e-824c-745d19604849"
+    summary: "48899c65-8da0-4c28-9fc1-b2a8811f523e"
+  task_by_day:
+    today: "eb7230a2-c65c-4a25-a9c6-173da5eed014"
+    morning: "09f5703f-caaf-4173-9add-93738339926a"
+    noon: "da80f005-519d-4e2d-8b6e-b0a78dcb8ea8"
+    afternoon: "59651999-59eb-46b1-b509-3ff495bedbbc"
+    evening: "e6780ec4-a8ad-4821-94a7-0e0f3cec6d32"
+  review:
+    no_date: "a38442fc-0efc-4160-a0fb-f008266fc343"
+    to_adjust: "e642e829-ba92-4a39-a63f-321af05ae225"
