other endpoint, interval removal, self healing for deleted links, missing collections, removal of journaling for now

--- a/utils/archive_data.yaml
+++ b/utils/archive_data.yaml
@@ -14,11 +14,6 @@ Day Segment:
   Morning: bafyreicq3yslzhihwosse5qhrc5xljo26mr4bqzzjkwrz67mmggpl7vm2m
   Evening: bafyreihtc55jlbuhgrs565chpxbewkfafvdzg2dm6ldryl4hjpvs6lkwha
   Afternoon: bafyreiful4o6d4lph4q7y6dk4wxlkl77n45au63wcrqtyui46czlyic5yu
-Interval:
-  id: bafyreie3t5dyz7434kio7id27hmh5rsxxkmietsibsscvktfvrvv3wgsaq
-  🍉: bafyreibotgkgaf4e37hsijexa4jkvq5n2ehucdkdftz3p63q7wybkgcwcy
-  🍅: bafyreidhrefzwmuleowxlhmhuxund2orgrbm56ztrujc33zmahyehh6jiy
-  🍒: bafyreif53ybgdj4ugrhfckubqu7zujpbmbqknevka7s4v5hjzlakvw7654
 Function:
   id: bafyreib5dwuhlxsem46yj2hdymwo5zebmmuwgy72mqc6omprwqy4b2nnyy
   Corrective: bafyreig6glfdb7c2226s7llzfzbzjmeitmtf4zp7kza5uwbqbmnbhezlpi
@@ -38,3 +33,6 @@ Project:
   Rats: bafyreig2frziylxykwphhg2ayi4sefzvlbq2tnxd633sppp5qtsh3q637e
   Cleaning: bafyreiekzxqroutoko2xtmbahdq7zxzwhigcoeo77okkrkdprf5axm3gku
   Maintenance: bafyreigbasq6usehkq5rrh63fkygnd2lmwwgkcud6tbpt7gdlqoj4uqte4
+  Migrate From Notion: bafyreiam3dfkktkqxfdpskuufm6tlybzudqjthyhue4uuuaus6jr2gjihq
+  Career: bafyreibc7mprc6f7pum4jagav3i24gsgxy43llsjyj3u2hwr6cypzkmy2e
+  Shopping: bafyreidm6wqj75l2xingm6gjyxpxc6klphponpwbou45r5pyqqv4ywnwwu
