Unix update and black format

--- a/utils/archive_data.yaml
+++ b/utils/archive_data.yaml
@@ -36,3 +36,4 @@ Project:
   Migrate From Notion: bafyreiam3dfkktkqxfdpskuufm6tlybzudqjthyhue4uuuaus6jr2gjihq
   Career: bafyreibc7mprc6f7pum4jagav3i24gsgxy43llsjyj3u2hwr6cypzkmy2e
   Shopping: bafyreidm6wqj75l2xingm6gjyxpxc6klphponpwbou45r5pyqqv4ywnwwu
+  Owning a Home: bafyreiemd7ilxkken4kxfvgcjmaxynrgovruvhipgz7ebt5gv3iffyjvoi
