--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,11 +9,12 @@
 				"main_local:app",
 				"--reload",
 				"--host",
-				"10.147.17.107",
+				"100.89.127.5",
 				"--port",
 				"8001"
 			],
-			"jinja": true
+			"jinja": true,
+			"python": "${command:python.interpreterPath}"
 		},
 		{
 			"name": "Python Debugger: FastAPI, local",
@@ -24,7 +25,7 @@
 				"main_local:app",
 				"--reload",
 				"--host",
-				"192.168.20.5",
+				"192.168.50.41",
 				"--port",
 				"8001"
 			],
@@ -39,7 +40,7 @@
 				"main:app",
 				"--reload",
 				"--host",
-				"10.147.17.107",
+				"100.89.127.5",
 				"--port",
 				"8001"
 			],
@@ -54,7 +55,7 @@
 				"main:app",
 				"--reload",
 				"--host",
-				"192.168.20.8",
+				"192.168.50.41",
 				"--port",
 				"8001"
 			],
