--- a/utils/archive_data.yaml
+++ b/utils/archive_data.yaml
@@ -26,14 +26,14 @@ Function:
   Perfective: bafyreifjq6xbybn2rl45az3sms4msbrbn3c5tcvwbieazgquspoxd4snwe
 Project:
   id: bafyreifd2g23kmyvq2oqeo6vnoqhfvegxy5rvzy2g2sqdj6imrw5rhtfym
-  Home: bafyreifth4csyc2hlwcqhnv6kvckzxulfwreelae74ymhwpqk6jfq7jqfi
-  Crafts: bafyreihwzqm3qg2vf6rtffr5wp6e7766bte5owcc62l7g7mpus6snmrb7y
-  Anytype Automation: bafyreiadjzxhc4houdsu4mtpm3pa2v2b4rrebhwzvxucsg723jho77qaia
-  Needs: bafyreidmk6dgfnlpy5qyqyft5p2yxe4uinn3iu2skce7trnmx7brwibq74
-  Rats: bafyreig2frziylxykwphhg2ayi4sefzvlbq2tnxd633sppp5qtsh3q637e
-  Cleaning: bafyreiekzxqroutoko2xtmbahdq7zxzwhigcoeo77okkrkdprf5axm3gku
-  Maintenance: bafyreigbasq6usehkq5rrh63fkygnd2lmwwgkcud6tbpt7gdlqoj4uqte4
-  Migrate From Notion: bafyreiam3dfkktkqxfdpskuufm6tlybzudqjthyhue4uuuaus6jr2gjihq
-  Career: bafyreibc7mprc6f7pum4jagav3i24gsgxy43llsjyj3u2hwr6cypzkmy2e
-  Shopping: bafyreidm6wqj75l2xingm6gjyxpxc6klphponpwbou45r5pyqqv4ywnwwu
-  Owning a Home: bafyreiemd7ilxkken4kxfvgcjmaxynrgovruvhipgz7ebt5gv3iffyjvoi
+  Home - Hom: bafyreifth4csyc2hlwcqhnv6kvckzxulfwreelae74ymhwpqk6jfq7jqfi
+  Crafts - Wor: bafyreihwzqm3qg2vf6rtffr5wp6e7766bte5owcc62l7g7mpus6snmrb7y
+  Rats - Car: bafyreig2frziylxykwphhg2ayi4sefzvlbq2tnxd633sppp5qtsh3q637e
+  Cleaning - Hom: bafyreiekzxqroutoko2xtmbahdq7zxzwhigcoeo77okkrkdprf5axm3gku
+  Maintenance - Sys: bafyreigbasq6usehkq5rrh63fkygnd2lmwwgkcud6tbpt7gdlqoj4uqte4
+  Migrate From Notion - Sys: bafyreiam3dfkktkqxfdpskuufm6tlybzudqjthyhue4uuuaus6jr2gjihq
+  Career - Fin: bafyreibc7mprc6f7pum4jagav3i24gsgxy43llsjyj3u2hwr6cypzkmy2e
+  Shopping - Fin: bafyreidm6wqj75l2xingm6gjyxpxc6klphponpwbou45r5pyqqv4ywnwwu
+  Owning a Home - Fin: bafyreiemd7ilxkken4kxfvgcjmaxynrgovruvhipgz7ebt5gv3iffyjvoi
+  Anytype Automation - Sys: bafyreihltwyr5njhxihyyqjyfwmpyaajqafm7s3wsxhgntpbpgg3vzs46m
+  Needs - Car: bafyreibzohusfdqewjuoio2ruydc2q43444pp3zlix6rpvo3lf744az7bi
